--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.12",
+    "@types/assert": "^1.5.6",
     "@types/chrome": "^0.0.235",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
